--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8Q-Tn-uNb">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8Q-Tn-uNb" userLabel="Title Section">
                         <rect key="frame" x="8" y="12" width="245" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,7 +63,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="switchSection" destination="3Bs-cg-B5z" id="g50-OP-6gO"/>
-                <outlet property="titleSection" destination="z8Q-Tn-uNb" id="vAl-Xa-eUa"/>
+                <outlet property="titleSection" destination="z8Q-Tn-uNb" id="1y4-Ud-MXp"/>
             </connections>
             <point key="canvasLocation" x="410" y="300.5"/>
         </tableViewCell>
