--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/SharePrivilegeCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/SharePrivilegeCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ShareLinkHeaderIdentifier" rowHeight="45" id="8Z5-rf-zZ8" userLabel="SharePrivilegeIdentifier" customClass="SharePrivilegeCell" customModule="Owncloud_iOs_Client" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SharePrivilegeIdentifier" rowHeight="45" id="8Z5-rf-zZ8" userLabel="SharePrivilegeIdentifier" customClass="SharePrivilegeCell" customModule="Owncloud_iOs_Client" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Z5-rf-zZ8" id="mcU-f6-ESE">
@@ -62,8 +62,8 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="optionName" destination="06q-8S-Bc9" id="wYq-bl-qYD"/>
-                <outlet property="optionSwitch" destination="0EM-W9-wfT" id="JVx-rf-885"/>
+                <outlet property="optionName" destination="06q-8S-Bc9" id="dYd-5y-QlT"/>
+                <outlet property="optionSwitch" destination="0EM-W9-wfT" id="75h-5t-1B5"/>
             </connections>
             <point key="canvasLocation" x="666" y="257.5"/>
         </tableViewCell>
