Disabled edit button if all edit options are disabled

--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareUserPrivilegeCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareUserPrivilegeCell.xib
@@ -16,12 +16,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Name" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Zy-MH-mRZ">
-                        <rect key="frame" x="8" y="35" width="304" height="39"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="File Name" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Zy-MH-mRZ">
+                        <rect key="frame" x="8" y="8" width="304" height="94"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="6Zy-MH-mRZ" secondAttribute="height" multiplier="304:39" id="B3Q-wG-B5a"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
