--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
@@ -22,14 +22,14 @@
                             <constraint firstAttribute="height" constant="90" id="znX-FW-wxm"/>
                         </constraints>
                     </imageView>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" misplaced="YES" text="File Name" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-bh-jmU">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" misplaced="YES" text="File Name" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-bh-jmU">
                         <rect key="frame" x="108" y="25" width="204" height="45"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Name" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqj-YB-hKp">
-                        <rect key="frame" x="108" y="22" width="204" height="75"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Name" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqj-YB-hKp">
+                        <rect key="frame" x="108" y="16" width="204" height="87"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -52,8 +52,10 @@
                     <constraint firstItem="5i0-Uz-NhM" firstAttribute="top" secondItem="Yje-bh-jmU" secondAttribute="bottom" constant="8" id="Gz1-gw-Ygq"/>
                     <constraint firstItem="Bqj-YB-hKp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IWO-nq-pdn"/>
                     <constraint firstItem="Bqj-YB-hKp" firstAttribute="leading" secondItem="3Ov-PO-1rQ" secondAttribute="trailing" constant="8" id="JAX-Zm-Igs"/>
+                    <constraint firstItem="Bqj-YB-hKp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Jwj-zi-cCs"/>
                     <constraint firstAttribute="bottom" secondItem="5i0-Uz-NhM" secondAttribute="bottom" constant="25" id="KRA-iE-1f1"/>
                     <constraint firstAttribute="trailing" secondItem="5i0-Uz-NhM" secondAttribute="trailing" constant="8" id="LvY-mk-4Ba"/>
+                    <constraint firstAttribute="bottom" secondItem="Bqj-YB-hKp" secondAttribute="bottom" constant="16" id="NDp-y4-Twd"/>
                     <constraint firstAttribute="bottomMargin" secondItem="3Ov-PO-1rQ" secondAttribute="bottom" constant="6" id="TMJ-kQ-yF4"/>
                     <constraint firstItem="3Ov-PO-1rQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="UlH-Vg-HKA"/>
                     <constraint firstAttribute="bottom" secondItem="5i0-Uz-NhM" secondAttribute="bottom" constant="14" id="Uz0-VV-rLr"/>
@@ -62,7 +64,9 @@
                     <constraint firstItem="Yje-bh-jmU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="fyt-jl-Ste"/>
                     <constraint firstItem="Bqj-YB-hKp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="41" id="gZ8-7D-jWP"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Bqj-YB-hKp" secondAttribute="bottom" constant="41" id="guG-Bi-Rnq"/>
+                    <constraint firstItem="5i0-Uz-NhM" firstAttribute="top" secondItem="Yje-bh-jmU" secondAttribute="bottom" constant="14" id="iVE-9J-Wep"/>
                     <constraint firstAttribute="bottom" secondItem="Bqj-YB-hKp" secondAttribute="bottom" constant="37" id="jFc-sD-k9r"/>
+                    <constraint firstItem="5i0-Uz-NhM" firstAttribute="top" secondItem="Yje-bh-jmU" secondAttribute="bottom" constant="4" id="mmh-dk-0BI"/>
                     <constraint firstItem="Yje-bh-jmU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="qgr-0r-HWw"/>
                     <constraint firstAttribute="bottomMargin" secondItem="5i0-Uz-NhM" secondAttribute="bottom" constant="6" id="tJU-35-gA7"/>
                     <constraint firstItem="Bqj-YB-hKp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22" id="tb6-AT-nGd"/>
@@ -74,14 +78,17 @@
                         <exclude reference="IWO-nq-pdn"/>
                         <exclude reference="JAX-Zm-Igs"/>
                         <exclude reference="aIa-wX-HXt"/>
+                        <exclude reference="fll-od-SRe"/>
                         <exclude reference="gZ8-7D-jWP"/>
                         <exclude reference="guG-Bi-Rnq"/>
                         <exclude reference="jFc-sD-k9r"/>
+                        <exclude reference="tb6-AT-nGd"/>
                         <exclude reference="qgr-0r-HWw"/>
                         <exclude reference="0Sm-LB-UKl"/>
                         <exclude reference="5fr-jO-HzS"/>
                         <exclude reference="Gz1-gw-Ygq"/>
                         <exclude reference="Uz0-VV-rLr"/>
+                        <exclude reference="iVE-9J-Wep"/>
                         <exclude reference="tJU-35-gA7"/>
                         <exclude reference="xJ0-v6-Lbc"/>
                     </mask>
