--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareUserPrivilegeCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareUserPrivilegeCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -13,23 +12,21 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FGO-Yn-a4g" id="Lam-g6-ubN">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="File Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Zy-MH-mRZ">
-                        <rect key="frame" x="8" y="16" width="304" height="79"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="6Zy-MH-mRZ" secondAttribute="height" multiplier="304:39" id="B3Q-wG-B5a"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Zy-MH-mRZ">
+                        <rect key="frame" x="8" y="20" width="304" height="79"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="leading" secondItem="Lam-g6-ubN" secondAttribute="leadingMargin" id="KLT-E0-jKt"/>
-                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="top" secondItem="Lam-g6-ubN" secondAttribute="topMargin" constant="27" id="WDu-bA-d4G"/>
-                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="trailing" secondItem="Lam-g6-ubN" secondAttribute="trailingMargin" id="oBN-bJ-85p"/>
+                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="leading" secondItem="Lam-g6-ubN" secondAttribute="leadingMargin" id="Ayh-hT-iHj"/>
+                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="top" secondItem="Lam-g6-ubN" secondAttribute="topMargin" constant="12" id="agV-Z3-Mdc"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="6Zy-MH-mRZ" secondAttribute="bottom" constant="12" id="qXR-Iz-Q8j"/>
+                    <constraint firstItem="6Zy-MH-mRZ" firstAttribute="trailing" secondItem="Lam-g6-ubN" secondAttribute="trailingMargin" id="vU2-HL-ZJE"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
