--- a/Owncloud iOs Client/Launch Screen.storyboard
+++ b/Owncloud iOs Client/Launch Screen.storyboard
@@ -26,7 +26,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rlu-H4-h2W" secondAttribute="bottom" constant="20" id="4ay-2j-Vvc"/>
                             <constraint firstItem="Rlu-H4-h2W" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="bNl-ae-jzv"/>
