--- a/Owncloud iOs Client/Files/Edit/EditFileViewController.xib
+++ b/Owncloud iOs Client/Files/Edit/EditFileViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -18,12 +18,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ij5-gI-oPC">
-                    <rect key="frame" x="8" y="70" width="584" height="30"/>
+                    <rect key="frame" x="8" y="8" width="584" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="pZr-GA-ahk"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xMh-ks-EIq">
-                    <rect key="frame" x="8" y="113" width="584" height="479"/>
+                    <rect key="frame" x="8" y="51" width="584" height="541"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
@@ -32,13 +35,12 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="xMh-ks-EIq" secondAttribute="bottom" constant="8" id="6ae-c9-35C"/>
-                <constraint firstItem="xMh-ks-EIq" firstAttribute="top" secondItem="ij5-gI-oPC" secondAttribute="bottom" constant="13" id="B3s-Yd-ibO"/>
                 <constraint firstItem="ij5-gI-oPC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="L2G-Vl-gSL"/>
                 <constraint firstItem="xMh-ks-EIq" firstAttribute="top" secondItem="ij5-gI-oPC" secondAttribute="bottom" constant="13" id="VZ2-0X-P0K"/>
                 <constraint firstAttribute="trailing" secondItem="ij5-gI-oPC" secondAttribute="trailing" constant="8" id="mXo-5z-iax"/>
-                <constraint firstItem="ij5-gI-oPC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="70" id="o7Y-fq-ntp"/>
                 <constraint firstItem="xMh-ks-EIq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="rcY-Mx-YiW"/>
                 <constraint firstAttribute="trailing" secondItem="xMh-ks-EIq" secondAttribute="trailing" constant="8" id="tYo-Ml-Lec"/>
+                <constraint firstItem="ij5-gI-oPC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="zGx-O3-U2K"/>
             </constraints>
         </view>
     </objects>
