--- a/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
+++ b/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController">
@@ -94,7 +94,7 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem width="16" style="plain" systemItem="fixedSpace" id="VYt-rC-1eC"/>
-                        <barButtonItem image="favoriteTB.png" style="plain" id="d5c-hM-MXC">
+                        <barButtonItem image="available_offline_TB.png" style="plain" id="d5c-hM-MXC">
                             <connections>
                                 <action selector="didPressFavoritesButton:" destination="-1" id="zKn-Qj-Knm"/>
                             </connections>
@@ -185,11 +185,11 @@
         </view>
     </objects>
     <resources>
+        <image name="available_offline_TB.png" width="25" height="25"/>
         <image name="cancel_download.png" width="25" height="25"/>
         <image name="cancel_download_white.png" width="25" height="25"/>
         <image name="company_empty_screen_ipad.png" width="512" height="279"/>
         <image name="deleteTB.png" width="25" height="25"/>
-        <image name="favoriteTB.png" width="25" height="25"/>
         <image name="openWithTB.png" width="25" height="25"/>
         <image name="sharedItem.png" width="25" height="25"/>
     </resources>
