Updated to the new synced (locally downloaded) icon in customCellFileAndDirectory xib

--- a/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
+++ b/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,9 +16,9 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3">
-                        <rect key="frame" x="58" y="10" width="230" height="20"/>
+                        <rect key="frame" x="53" y="10" width="235" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="5">
                         <rect key="frame" x="9" y="11" width="32" height="32"/>
@@ -27,7 +28,7 @@
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                        <rect key="frame" x="22" y="11" width="32" height="32"/>
+                        <rect key="frame" x="17" y="11" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="32" id="OHT-3x-PxK"/>
                             <constraint firstAttribute="height" constant="32" id="zCt-0e-HdN"/>
@@ -48,7 +49,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11">
-                        <rect key="frame" x="58" y="32" width="230" height="15"/>
+                        <rect key="frame" x="53" y="32" width="235" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="mQ8-I9-mj9"/>
                         </constraints>
@@ -66,7 +67,7 @@
                     <constraint firstItem="5" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="1" id="Sbt-zf-CoG"/>
                     <constraint firstItem="11" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="2" id="d8F-WH-F4Y"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Nv0-oE-v77" secondAttribute="trailing" constant="-2" id="dDI-VR-MUy"/>
-                    <constraint firstItem="7" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="14" id="eoB-Vm-11G"/>
+                    <constraint firstItem="7" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="9" id="eoB-Vm-11G"/>
                     <constraint firstItem="11" firstAttribute="leading" secondItem="7" secondAttribute="trailing" constant="4" id="gTX-y1-e2b"/>
                     <constraint firstItem="5" firstAttribute="top" secondItem="sQq-jC-UEV" secondAttribute="topMargin" constant="3" id="gtR-MM-n1T"/>
                     <constraint firstItem="3" firstAttribute="top" secondItem="sQq-jC-UEV" secondAttribute="topMargin" constant="2" id="hRW-i2-PsO"/>
